--- a/index.html
+++ b/index.html
@@ -1,1 +1,48 @@
-<h1>Hello World</h1>
+<!DOCTYPE html>
+<html lang="en">
+<!-- The language defaults to English - update accordingly if necessary -->
+
+<head>
+    <meta charset="utf-8">
+    <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title> </title>
+    <link rel="stylesheet" href="index.css">
+</head>
+
+<body>
+    <div id="base-container">
+        <div class="group">
+            <!-- <span class="header">ΜΠΥΡΕΣ</span> -->
+            <!-- <span class="header">μπύρα &#127866 beer</span> -->
+            <span class="header">&#127866</span>
+            <div class="item">
+                <span class="name">Amstel</span>
+                <span>&nbsp&nbsp&nbsp</span>
+                <span class="price">1.8</span>
+            </div>
+            <div class="item">
+                <span class="name">Heineken</span>
+                <span>&nbsp&nbsp&nbsp</span>
+                <span class="price">14.42</span>
+            </div>
+        </div>
+
+        <div class="group">
+            <!-- <span class="header">κρασί &#10033 wine</span> -->
+            <span class="header">&#127863</span>
+            <div class="item">
+                <span class="name">Δήμητρα</span>
+                <span>&nbsp&nbsp&nbsp</span>
+                <span class="price">1.8</span>
+            </div>
+            <div class="item">
+                <span class="name">Κατώγι</span>
+                <span>&nbsp&nbsp&nbsp</span>
+                <span class="price">12.42</span>
+            </div>
+        </div>
+    </div>
+</body>
+
+</html>
