--- a/index.html
+++ b/index.html
@@ -1,48 +1,667 @@
 <!DOCTYPE html>
-<html lang="en">
-<!-- The language defaults to English - update accordingly if necessary -->
 
 <head>
-    <meta charset="utf-8">
-    <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title> </title>
-    <link rel="stylesheet" href="index.css">
+
+	<meta charset="utf-8">
+
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<title> </title>
+
+	<link rel="stylesheet" href="index.css">
+
 </head>
 
 <body>
-    <div id="base-container">
-        <div class="group">
-            <!-- <span class="header">ΜΠΥΡΕΣ</span> -->
-            <!-- <span class="header">μπύρα &#127866 beer</span> -->
-            <span class="header">&#127866</span>
-            <div class="item">
-                <span class="name">Amstel</span>
-                <span>&nbsp&nbsp&nbsp</span>
-                <span class="price">1.8</span>
-            </div>
-            <div class="item">
-                <span class="name">Heineken</span>
-                <span>&nbsp&nbsp&nbsp</span>
-                <span class="price">14.42</span>
-            </div>
-        </div>
 
-        <div class="group">
-            <!-- <span class="header">κρασί &#10033 wine</span> -->
-            <span class="header">&#127863</span>
-            <div class="item">
-                <span class="name">Δήμητρα</span>
-                <span>&nbsp&nbsp&nbsp</span>
-                <span class="price">1.8</span>
-            </div>
-            <div class="item">
-                <span class="name">Κατώγι</span>
-                <span>&nbsp&nbsp&nbsp</span>
-                <span class="price">12.42</span>
-            </div>
-        </div>
-    </div>
+<table>
+	<tr>
+		<th colspan="2" class="group-header">ΜΠΥΡΑ</th>
+	</tr>
+
+	<tr>
+		<th colspan="2" class="subgroup-header"><span>&nbspβαρέλι&nbsp</span></th>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">FISCHER</td>
+		<td class="item-price">4</td>
+	</tr>
+
+	<tr>
+		<th colspan="2" class="subgroup-header"><span>&nbspμπουκάλι&nbsp</span></th>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">HEINEKEN</td>
+		<td class="item-price">4</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">HEINEKEN 0%</td>
+		<td class="item-price">5</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">SOL</td>
+		<td class="item-price">5</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">BUD</td>
+		<td class="item-price">5</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">AMSTEL RADLER</td>
+		<td class="item-price">4</td>
+	</tr>
+
+	<tr>
+		<th colspan="2" class="group-header">ΜΗΛΙΤΗΣ</th>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">STRONGBOW GOLD</td>
+		<td class="item-price">5</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">ΜΗΛΟΚΛΕΦΤΗΣ</td>
+		<td class="item-price">5</td>
+	</tr>
+
+	<tr>
+		<th colspan="2" class="group-header">ΚΡΑΣΙ</th>
+	</tr>
+
+	<tr>
+		<th colspan="2" class="subgroup-header"><span>&nbspλευκό&nbsp</span></th>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">ΓΙΟΡΤΗ SEMELI</td>
+		<td class="item-price">5</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">GRAN PASSIONE</td>
+		<td class="item-price">6</td>
+	</tr>
+
+	<tr>
+		<th colspan="2" class="subgroup-header"><span>&nbspκόκκινο&nbsp</span></th>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">ΓΙΟΡΤΗ SEMELI</td>
+		<td class="item-price">5</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">GRAN PASSIONE</td>
+		<td class="item-price">6</td>
+	</tr>
+
+	<tr>
+		<th colspan="2" class="subgroup-header"><span>&nbspροζέ&nbsp</span></th>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">SWEET HABIT</td>
+		<td class="item-price">5</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">GRAN PASSIONE</td>
+		<td class="item-price">6</td>
+	</tr>
+
+	<tr>
+		<th colspan="2" class="subgroup-header"><span>&nbspαφρώδες&nbsp</span></th>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">PROSECCO</td>
+		<td class="item-price">5</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">MOSCATO D'ASTI</td>
+		<td class="item-price">5</td>
+	</tr>
+
+	<tr>
+		<th colspan="2" class="group-header">ΑΠΕΡΙΤΙΦ</th>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">CAMPARI</td>
+		<td class="item-price">6</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">APEROL</td>
+		<td class="item-price">6</td>
+	</tr>
+
+	<tr>
+		<th colspan="2" class="group-header">ΤΕΚΙΛΑ</th>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">JOSE CUERVO</td>
+		<td class="item-price">6</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">JOSE CUERVO ΚΙΤΡΙΝΗ </td>
+		<td class="item-price">6</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">ALTOS ΚΙΤΡΙΝΗ</td>
+		<td class="item-price">7</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">ALTOS ΛΕΥΚΗ</td>
+		<td class="item-price">7</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">DON JULIO BLANCO</td>
+		<td class="item-price">8</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">DON JULIO REPOSANDO</td>
+		<td class="item-price">9</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">DON JULIO ANEJO</td>
+		<td class="item-price">10</td>
+	</tr>
+
+	<tr>
+		<th colspan="2" class="group-header">ΟΥΙΣΚΙ</th>
+	</tr>
+
+	<tr>
+		<th colspan="2" class="subgroup-header"><span>&nbspscotch&nbsp</span></th>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">JOHNY WALKER RED</td>
+		<td class="item-price">6</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">FAMOUS GROUSE</td>
+		<td class="item-price">6</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">DEWAR'S</td>
+		<td class="item-price">6</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">GRANT'S</td>
+		<td class="item-price">6</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">BALANTINE'S</td>
+		<td class="item-price">6</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">CUTTY SHARK</td>
+		<td class="item-price">6</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">J&B</td>
+		<td class="item-price">6</td>
+	</tr>
+
+	<tr>
+		<th colspan="2" class="subgroup-header"><span>&nbspburbon&nbsp</span></th>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">JIM BEAM</td>
+		<td class="item-price">7</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">CANADIAN</td>
+		<td class="item-price">6</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">FOUR ROSES</td>
+		<td class="item-price">6</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">JACK DANIEL'S</td>
+		<td class="item-price">7</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">JACK DANIEL'S HONEY</td>
+		<td class="item-price">7</td>
+	</tr>
+
+	<tr>
+		<th colspan="2" class="subgroup-header"><span>&nbspsingle malt&nbsp</span></th>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">GLENLIVET</td>
+		<td class="item-price">8</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">GLENLIVET FOUNDER'S RES</td>
+		<td class="item-price">8</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">GLENLIVET 15*</td>
+		<td class="item-price">10</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">CARDU</td>
+		<td class="item-price">8</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">LAGAVULIN</td>
+		<td class="item-price">14</td>
+	</tr>
+
+	<tr>
+		<th colspan="2" class="subgroup-header"><span>&nbspirish&nbsp</span></th>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">JAMESON</td>
+		<td class="item-price">6</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">JAMESON BLACK BARREL</td>
+		<td class="item-price">8</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">JAMESON CASKMATES</td>
+		<td class="item-price">7</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">TULLAMOR</td>
+		<td class="item-price">6</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">BUSHMILL'S</td>
+		<td class="item-price">7</td>
+	</tr>
+
+	<tr>
+		<th colspan="2" class="subgroup-header"><span>&nbspspecial&nbsp</span></th>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">JOHNY BLACK</td>
+		<td class="item-price">7</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">CHIVAS EXTRA</td>
+		<td class="item-price">8</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">CHIVAS 12*</td>
+		<td class="item-price">7</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">CHIVAS 18*</td>
+		<td class="item-price">10</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">MONKEY SHOULDER</td>
+		<td class="item-price">8</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">DIMPLE</td>
+		<td class="item-price">7</td>
+	</tr>
+
+	<tr>
+		<th colspan="2" class="subgroup-header"><span>&nbspliquer&nbsp</span></th>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">DRAMBUI</td>
+		<td class="item-price">7</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">SOUTHERN COMFORT</td>
+		<td class="item-price">7</td>
+	</tr>
+
+	<tr>
+		<th colspan="2" class="group-header">ΒΟΤΚΑ</th>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">ABSOLUT</td>
+		<td class="item-price">6</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">STOLICHNAYA</td>
+		<td class="item-price">6</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">SMIRNOFF RED</td>
+		<td class="item-price">6</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">FINLANDIA</td>
+		<td class="item-price">6</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">SANDARD</td>
+		<td class="item-price">7</td>
+	</tr>
+
+	<tr>
+		<th colspan="2" class="subgroup-header"><span>&nbspspecial&nbsp</span></th>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">BELVEDERE</td>
+		<td class="item-price">10</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">GRAY GOUSE</td>
+		<td class="item-price">10</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">SNOW LEOPARD</td>
+		<td class="item-price">10</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">ABSOLUT ELYX</td>
+		<td class="item-price">10</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">SMIRNOFF GOLD</td>
+		<td class="item-price">7</td>
+	</tr>
+
+	<tr>
+		<th colspan="2" class="group-header">ΤΖΙΝ</th>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">BEEEATER</td>
+		<td class="item-price">6</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">TANQUERAY</td>
+		<td class="item-price">7</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">BOMBAY</td>
+		<td class="item-price">7</td>
+	</tr>
+
+	<tr>
+		<th colspan="2" class="subgroup-header"><span>&nbspspecial&nbsp</span></th>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">OPIHR</td>
+		<td class="item-price">8</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">BEEFEATER 24</td>
+		<td class="item-price">8</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">MATARΩΑ</td>
+		<td class="item-price">8</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">HENDRICK'S</td>
+		<td class="item-price">10</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">PLYMOUTH</td>
+		<td class="item-price">10</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">TANQUERAY 10</td>
+		<td class="item-price">10</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">GIN MARE</td>
+		<td class="item-price">10</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">MONKEY 47</td>
+		<td class="item-price">12</td>
+	</tr>
+
+	<tr>
+		<th colspan="2" class="group-header">ΡΟΥΜΙ</th>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">HAVANA 3</td>
+		<td class="item-price">6</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">BACARDI BIANCO</td>
+		<td class="item-price">6</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">CAPTAIN MORGAN</td>
+		<td class="item-price">6</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">SAILOR JERRY</td>
+		<td class="item-price">6</td>
+	</tr>
+
+	<tr>
+		<th colspan="2" class="subgroup-header"><span>&nbspspecial&nbsp</span></th>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">HAVANA 5</td>
+		<td class="item-price">7</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">HAVANA 7</td>
+		<td class="item-price">8</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">HAVANA SELECTION</td>
+		<td class="item-price">10</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">BACARDI 4 </td>
+		<td class="item-price">7</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">BACARDI 8</td>
+		<td class="item-price">8</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">BACARDI 10</td>
+		<td class="item-price">10</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">PAMPERO SP</td>
+		<td class="item-price">7</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">KRAKEN</td>
+		<td class="item-price">7</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">DON PAPA</td>
+		<td class="item-price">10</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">EL DORADO</td>
+		<td class="item-price">10</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">DIPLOMATIKO MANTUANO</td>
+		<td class="item-price">9</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">DIPLOMATICO ANEJO</td>
+		<td class="item-price">8</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">DIPLOMATICO RESENA</td>
+		<td class="item-price">10</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">ZACAPA 23</td>
+		<td class="item-price">10</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">BRUGAL ANEJO</td>
+		<td class="item-price">7</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">BARCELO IMPERIAL</td>
+		<td class="item-price">8</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">RON BARCELO BLANCO</td>
+		<td class="item-price">7</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">MATUSALEM PLATINO</td>
+		<td class="item-price">7</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">SANTA TERESSA</td>
+		<td class="item-price">10</td>
+	</tr>
+
+	<tr>
+		<th colspan="2" class="group-header">ΚΟΚΤEΪΛ</th>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">LONG ISLAND ICED TEA</td>
+		<td class="item-price">8</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">MAI TAI</td>
+		<td class="item-price">8</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">DAQUIRI</td>
+		<td class="item-price">8</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">MARGARITA </td>
+		<td class="item-price">8</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">MOJITO</td>
+		<td class="item-price">8</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">CAIPIRINIA</td>
+		<td class="item-price">7</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">CUBA LIBRE</td>
+		<td class="item-price">7</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">SUMMER TIME LOVE </td>
+		<td class="item-price">8</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">LOLLIPOP </td>
+		<td class="item-price">8</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">SORBETTO </td>
+		<td class="item-price">8</td>
+	</tr>
+
+</table>
 </body>
 
 </html>
+
