--- a/index.html
+++ b/index.html
@@ -16,647 +16,840 @@
 
 <table>
 	<tr>
-		<th colspan="2" class="group-header">ΜΠΥΡΑ</th>
+		<th colspan="3" class="group-header">
+			<span>ΜΠΥΡΑ</span>
+			<span>ΜΠΥΡΑ</span>
+			<span>ΜΠΥΡΑ</span>
+		</th>
 	</tr>
 
 	<tr>
-		<th colspan="2" class="subgroup-header"><span>&nbspβαρέλι&nbsp</span></th>
+		<th class="subgroup-header">
+			<span>βαρέλι</span>
+		</th>
+		<th>&nbsp</th>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">FISCHER</td>
+		<td></td>
 		<td class="item-price">4</td>
 	</tr>
 
 	<tr>
-		<th colspan="2" class="subgroup-header"><span>&nbspμπουκάλι&nbsp</span></th>
-	</tr>
-
-	<tr class="item">
-		<td class="item-name">HEINEKEN</td>
-		<td class="item-price">4</td>
-	</tr>
-
-	<tr class="item">
-		<td class="item-name">HEINEKEN 0%</td>
-		<td class="item-price">5</td>
+		<th class="subgroup-header">
+			<span>μπουκάλι</span>
+		</th>
+		<th>&nbsp</th>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">SOL</td>
+		<td></td>
 		<td class="item-price">5</td>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">BUD</td>
+		<td></td>
+		<td class="item-price">5</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">HEINEKEN</td>
+		<td></td>
+		<td class="item-price">4</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">HEINEKEN 0%</td>
+		<td></td>
 		<td class="item-price">5</td>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">AMSTEL RADLER</td>
+		<td></td>
 		<td class="item-price">4</td>
 	</tr>
 
 	<tr>
-		<th colspan="2" class="group-header">ΜΗΛΙΤΗΣ</th>
-	</tr>
-
-	<tr class="item">
-		<td class="item-name">STRONGBOW GOLD</td>
-		<td class="item-price">5</td>
+		<th class="subgroup-header">
+			<span>μηλίτης</span>
+		</th>
+		<th>&nbsp</th>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">ΜΗΛΟΚΛΕΦΤΗΣ</td>
+		<td></td>
+		<td class="item-price">5</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">STRONGBOW GOLD</td>
+		<td></td>
 		<td class="item-price">5</td>
 	</tr>
 
 	<tr>
-		<th colspan="2" class="group-header">ΚΡΑΣΙ</th>
+		<th colspan="3" class="group-header">
+			<span>ΚΡΑΣΙ</span>
+			<span>ΚΡΑΣΙ</span>
+			<span>ΚΡΑΣΙ</span>
+		</th>
 	</tr>
 
 	<tr>
-		<th colspan="2" class="subgroup-header"><span>&nbspλευκό&nbsp</span></th>
+		<th class="subgroup-header">
+			<span>λευκό</span>
+		</th>
+		<th>&nbsp</th>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">ΓΙΟΡΤΗ SEMELI</td>
+		<td></td>
 		<td class="item-price">5</td>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">GRAN PASSIONE</td>
+		<td></td>
 		<td class="item-price">6</td>
 	</tr>
 
 	<tr>
-		<th colspan="2" class="subgroup-header"><span>&nbspκόκκινο&nbsp</span></th>
+		<th class="subgroup-header">
+			<span>κόκκινο</span>
+		</th>
+		<th>&nbsp</th>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">ΓΙΟΡΤΗ SEMELI</td>
+		<td></td>
 		<td class="item-price">5</td>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">GRAN PASSIONE</td>
+		<td></td>
 		<td class="item-price">6</td>
 	</tr>
 
 	<tr>
-		<th colspan="2" class="subgroup-header"><span>&nbspροζέ&nbsp</span></th>
+		<th class="subgroup-header">
+			<span>ροζέ</span>
+		</th>
+		<th>&nbsp</th>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">SWEET HABIT</td>
+		<td></td>
 		<td class="item-price">5</td>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">GRAN PASSIONE</td>
+		<td></td>
 		<td class="item-price">6</td>
 	</tr>
 
 	<tr>
-		<th colspan="2" class="subgroup-header"><span>&nbspαφρώδες&nbsp</span></th>
-	</tr>
-
-	<tr class="item">
-		<td class="item-name">PROSECCO</td>
-		<td class="item-price">5</td>
+		<th class="subgroup-header">
+			<span>αφρώδες</span>
+		</th>
+		<th>&nbsp</th>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">MOSCATO D'ASTI</td>
+		<td></td>
+		<td class="item-price">5</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">PROSECCO</td>
+		<td></td>
 		<td class="item-price">5</td>
 	</tr>
 
 	<tr>
-		<th colspan="2" class="group-header">ΑΠΕΡΙΤΙΦ</th>
+		<th colspan="3" class="group-header">
+			<span>ΑΠΕΡΙΤΙΦ</span>
+			<span>ΑΠΕΡΙΤΙΦ</span>
+			<span>ΑΠΕΡΙΤΙΦ</span>
+		</th>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">CAMPARI</td>
+		<td></td>
 		<td class="item-price">6</td>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">APEROL</td>
+		<td></td>
 		<td class="item-price">6</td>
 	</tr>
 
 	<tr>
-		<th colspan="2" class="group-header">ΤΕΚΙΛΑ</th>
+		<th colspan="3" class="group-header">
+			<span>ΤΕΚΙΛΑ</span>
+			<span>ΤΕΚΙΛΑ</span>
+			<span>ΤΕΚΙΛΑ</span>
+		</th>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">JOSE CUERVO</td>
+		<td></td>
 		<td class="item-price">6</td>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">JOSE CUERVO ΚΙΤΡΙΝΗ </td>
+		<td></td>
 		<td class="item-price">6</td>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">ALTOS ΚΙΤΡΙΝΗ</td>
+		<td></td>
 		<td class="item-price">7</td>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">ALTOS ΛΕΥΚΗ</td>
+		<td></td>
 		<td class="item-price">7</td>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">DON JULIO BLANCO</td>
+		<td></td>
 		<td class="item-price">8</td>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">DON JULIO REPOSANDO</td>
+		<td></td>
 		<td class="item-price">9</td>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">DON JULIO ANEJO</td>
+		<td></td>
 		<td class="item-price">10</td>
 	</tr>
 
 	<tr>
-		<th colspan="2" class="group-header">ΟΥΙΣΚΙ</th>
+		<th colspan="3" class="group-header">
+			<span>ΟΥΙΣΚΙ</span>
+			<span>ΟΥΙΣΚΙ</span>
+			<span>ΟΥΙΣΚΙ</span>
+		</th>
 	</tr>
 
 	<tr>
-		<th colspan="2" class="subgroup-header"><span>&nbspscotch&nbsp</span></th>
+		<th class="subgroup-header">
+			<span>scotch</span>
+		</th>
+		<th>&nbsp</th>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">JOHNY WALKER RED</td>
+		<td></td>
 		<td class="item-price">6</td>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">FAMOUS GROUSE</td>
-		<td class="item-price">6</td>
-	</tr>
-
-	<tr class="item">
-		<td class="item-name">DEWAR'S</td>
-		<td class="item-price">6</td>
-	</tr>
-
-	<tr class="item">
-		<td class="item-name">GRANT'S</td>
+		<td></td>
 		<td class="item-price">6</td>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">BALANTINE'S</td>
+		<td></td>
 		<td class="item-price">6</td>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">CUTTY SHARK</td>
+		<td></td>
+		<td class="item-price">6</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">DEWAR'S</td>
+		<td></td>
+		<td class="item-price">6</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">GRANT'S</td>
+		<td></td>
 		<td class="item-price">6</td>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">J&B</td>
+		<td></td>
 		<td class="item-price">6</td>
 	</tr>
 
 	<tr>
-		<th colspan="2" class="subgroup-header"><span>&nbspburbon&nbsp</span></th>
-	</tr>
-
-	<tr class="item">
-		<td class="item-name">JIM BEAM</td>
-		<td class="item-price">7</td>
+		<th class="subgroup-header">
+			<span>burbon</span>
+		</th>
+		<th>&nbsp</th>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">CANADIAN</td>
+		<td></td>
 		<td class="item-price">6</td>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">FOUR ROSES</td>
+		<td></td>
 		<td class="item-price">6</td>
 	</tr>
 
 	<tr class="item">
+		<td class="item-name">JIM BEAM</td>
+		<td></td>
+		<td class="item-price">7</td>
+	</tr>
+
+	<tr class="item">
 		<td class="item-name">JACK DANIEL'S</td>
+		<td></td>
 		<td class="item-price">7</td>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">JACK DANIEL'S HONEY</td>
+		<td></td>
 		<td class="item-price">7</td>
 	</tr>
 
 	<tr>
-		<th colspan="2" class="subgroup-header"><span>&nbspsingle malt&nbsp</span></th>
+		<th class="subgroup-header">
+			<span>single malt</span>
+		</th>
+		<th>&nbsp</th>
 	</tr>
 
 	<tr class="item">
-		<td class="item-name">GLENLIVET</td>
+		<td class="item-name">CARDU</td>
+		<td></td>
 		<td class="item-price">8</td>
 	</tr>
 
 	<tr class="item">
-		<td class="item-name">GLENLIVET FOUNDER'S RES</td>
+		<td class="item-name">GLENLIVET</td>
+		<td></td>
+		<td class="item-price">8</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">GLENLIVET FOUNDER'S</td>
+		<td></td>
 		<td class="item-price">8</td>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">GLENLIVET 15*</td>
+		<td></td>
 		<td class="item-price">10</td>
 	</tr>
 
 	<tr class="item">
-		<td class="item-name">CARDU</td>
-		<td class="item-price">8</td>
-	</tr>
-
-	<tr class="item">
 		<td class="item-name">LAGAVULIN</td>
+		<td></td>
 		<td class="item-price">14</td>
 	</tr>
 
 	<tr>
-		<th colspan="2" class="subgroup-header"><span>&nbspirish&nbsp</span></th>
+		<th class="subgroup-header">
+			<span>irish</span>
+		</th>
+		<th>&nbsp</th>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">JAMESON</td>
+		<td></td>
 		<td class="item-price">6</td>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">JAMESON BLACK BARREL</td>
+		<td></td>
 		<td class="item-price">8</td>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">JAMESON CASKMATES</td>
+		<td></td>
 		<td class="item-price">7</td>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">TULLAMOR</td>
+		<td></td>
 		<td class="item-price">6</td>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">BUSHMILL'S</td>
+		<td></td>
 		<td class="item-price">7</td>
 	</tr>
 
 	<tr>
-		<th colspan="2" class="subgroup-header"><span>&nbspspecial&nbsp</span></th>
+		<th class="subgroup-header">
+			<span>special</span>
+		</th>
+		<th>&nbsp</th>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">JOHNY BLACK</td>
+		<td></td>
 		<td class="item-price">7</td>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">CHIVAS EXTRA</td>
+		<td></td>
 		<td class="item-price">8</td>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">CHIVAS 12*</td>
+		<td></td>
 		<td class="item-price">7</td>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">CHIVAS 18*</td>
+		<td></td>
 		<td class="item-price">10</td>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">MONKEY SHOULDER</td>
+		<td></td>
 		<td class="item-price">8</td>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">DIMPLE</td>
+		<td></td>
 		<td class="item-price">7</td>
 	</tr>
 
 	<tr>
-		<th colspan="2" class="subgroup-header"><span>&nbspliquer&nbsp</span></th>
+		<th class="subgroup-header">
+			<span>liquer</span>
+		</th>
+		<th>&nbsp</th>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">DRAMBUI</td>
+		<td></td>
 		<td class="item-price">7</td>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">SOUTHERN COMFORT</td>
+		<td></td>
 		<td class="item-price">7</td>
 	</tr>
 
 	<tr>
-		<th colspan="2" class="group-header">ΒΟΤΚΑ</th>
+		<th colspan="3" class="group-header">
+			<span>ΒΟΤΚΑ</span>
+			<span>ΒΟΤΚΑ</span>
+			<span>ΒΟΤΚΑ</span>
+		</th>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">ABSOLUT</td>
+		<td></td>
 		<td class="item-price">6</td>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">STOLICHNAYA</td>
+		<td></td>
 		<td class="item-price">6</td>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">SMIRNOFF RED</td>
+		<td></td>
 		<td class="item-price">6</td>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">FINLANDIA</td>
+		<td></td>
 		<td class="item-price">6</td>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">SANDARD</td>
+		<td></td>
 		<td class="item-price">7</td>
 	</tr>
 
 	<tr>
-		<th colspan="2" class="subgroup-header"><span>&nbspspecial&nbsp</span></th>
+		<th class="subgroup-header">
+			<span>special</span>
+		</th>
+		<th>&nbsp</th>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">BELVEDERE</td>
+		<td></td>
 		<td class="item-price">10</td>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">GRAY GOUSE</td>
+		<td></td>
 		<td class="item-price">10</td>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">SNOW LEOPARD</td>
+		<td></td>
 		<td class="item-price">10</td>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">ABSOLUT ELYX</td>
+		<td></td>
 		<td class="item-price">10</td>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">SMIRNOFF GOLD</td>
+		<td></td>
 		<td class="item-price">7</td>
 	</tr>
 
 	<tr>
-		<th colspan="2" class="group-header">ΤΖΙΝ</th>
+		<th colspan="3" class="group-header">
+			<span>ΤΖΙΝ</span>
+			<span>ΤΖΙΝ</span>
+			<span>ΤΖΙΝ</span>
+		</th>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">BEEEATER</td>
+		<td></td>
 		<td class="item-price">6</td>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">TANQUERAY</td>
+		<td></td>
 		<td class="item-price">7</td>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">BOMBAY</td>
+		<td></td>
 		<td class="item-price">7</td>
 	</tr>
 
 	<tr>
-		<th colspan="2" class="subgroup-header"><span>&nbspspecial&nbsp</span></th>
-	</tr>
-
-	<tr class="item">
-		<td class="item-name">OPIHR</td>
-		<td class="item-price">8</td>
+		<th class="subgroup-header">
+			<span>special</span>
+		</th>
+		<th>&nbsp</th>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">BEEFEATER 24</td>
+		<td></td>
+		<td class="item-price">8</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">OPIHR</td>
+		<td></td>
 		<td class="item-price">8</td>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">MATARΩΑ</td>
+		<td></td>
 		<td class="item-price">8</td>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">HENDRICK'S</td>
+		<td></td>
 		<td class="item-price">10</td>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">PLYMOUTH</td>
+		<td></td>
 		<td class="item-price">10</td>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">TANQUERAY 10</td>
+		<td></td>
 		<td class="item-price">10</td>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">GIN MARE</td>
+		<td></td>
 		<td class="item-price">10</td>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">MONKEY 47</td>
+		<td></td>
 		<td class="item-price">12</td>
 	</tr>
 
 	<tr>
-		<th colspan="2" class="group-header">ΡΟΥΜΙ</th>
+		<th colspan="3" class="group-header">
+			<span>ΡΟΥΜΙ</span>
+			<span>ΡΟΥΜΙ</span>
+			<span>ΡΟΥΜΙ</span>
+		</th>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">HAVANA 3</td>
-		<td class="item-price">6</td>
-	</tr>
-
-	<tr class="item">
-		<td class="item-name">BACARDI BIANCO</td>
-		<td class="item-price">6</td>
-	</tr>
-
-	<tr class="item">
-		<td class="item-name">CAPTAIN MORGAN</td>
+		<td></td>
 		<td class="item-price">6</td>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">SAILOR JERRY</td>
+		<td></td>
+		<td class="item-price">6</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">BACARDI BIANCO</td>
+		<td></td>
+		<td class="item-price">6</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">CAPTAIN MORGAN</td>
+		<td></td>
 		<td class="item-price">6</td>
 	</tr>
 
 	<tr>
-		<th colspan="2" class="subgroup-header"><span>&nbspspecial&nbsp</span></th>
+		<th class="subgroup-header">
+			<span>special</span>
+		</th>
+		<th>&nbsp</th>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">HAVANA 5</td>
+		<td></td>
 		<td class="item-price">7</td>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">HAVANA 7</td>
+		<td></td>
 		<td class="item-price">8</td>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">HAVANA SELECTION</td>
+		<td></td>
 		<td class="item-price">10</td>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">BACARDI 4 </td>
+		<td></td>
 		<td class="item-price">7</td>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">BACARDI 8</td>
+		<td></td>
 		<td class="item-price">8</td>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">BACARDI 10</td>
+		<td></td>
 		<td class="item-price">10</td>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">PAMPERO SP</td>
+		<td></td>
 		<td class="item-price">7</td>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">KRAKEN</td>
+		<td></td>
 		<td class="item-price">7</td>
 	</tr>
 
 	<tr class="item">
-		<td class="item-name">DON PAPA</td>
-		<td class="item-price">10</td>
-	</tr>
-
-	<tr class="item">
-		<td class="item-name">EL DORADO</td>
-		<td class="item-price">10</td>
-	</tr>
-
-	<tr class="item">
-		<td class="item-name">DIPLOMATIKO MANTUANO</td>
-		<td class="item-price">9</td>
-	</tr>
-
-	<tr class="item">
-		<td class="item-name">DIPLOMATICO ANEJO</td>
-		<td class="item-price">8</td>
-	</tr>
-
-	<tr class="item">
-		<td class="item-name">DIPLOMATICO RESENA</td>
-		<td class="item-price">10</td>
-	</tr>
-
-	<tr class="item">
-		<td class="item-name">ZACAPA 23</td>
-		<td class="item-price">10</td>
-	</tr>
-
-	<tr class="item">
 		<td class="item-name">BRUGAL ANEJO</td>
+		<td></td>
 		<td class="item-price">7</td>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">BARCELO IMPERIAL</td>
+		<td></td>
 		<td class="item-price">8</td>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">RON BARCELO BLANCO</td>
+		<td></td>
 		<td class="item-price">7</td>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">MATUSALEM PLATINO</td>
+		<td></td>
 		<td class="item-price">7</td>
 	</tr>
 
 	<tr class="item">
-		<td class="item-name">SANTA TERESSA</td>
-		<td class="item-price">10</td>
-	</tr>
-
-	<tr>
-		<th colspan="2" class="group-header">ΚΟΚΤEΪΛ</th>
+		<td class="item-name">DIPLOMATIKO MANTUANO</td>
+		<td></td>
+		<td class="item-price">9</td>
 	</tr>
 
 	<tr class="item">
-		<td class="item-name">LONG ISLAND ICED TEA</td>
+		<td class="item-name">DIPLOMATICO ANEJO</td>
+		<td></td>
 		<td class="item-price">8</td>
 	</tr>
 
 	<tr class="item">
+		<td class="item-name">DIPLOMATICO RESENA</td>
+		<td></td>
+		<td class="item-price">10</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">SANTA TERESSA</td>
+		<td></td>
+		<td class="item-price">10</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">DON PAPA</td>
+		<td></td>
+		<td class="item-price">10</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">EL DORADO</td>
+		<td></td>
+		<td class="item-price">10</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">ZACAPA 23</td>
+		<td></td>
+		<td class="item-price">10</td>
+	</tr>
+
+	<tr>
+		<th colspan="3" class="group-header">
+			<span>ΚΟΚΤEΪΛ</span>
+			<span>ΚΟΚΤEΪΛ</span>
+			<span>ΚΟΚΤEΪΛ</span>
+		</th>
+	</tr>
+
+	<tr class="item">
 		<td class="item-name">MAI TAI</td>
+		<td></td>
 		<td class="item-price">8</td>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">DAQUIRI</td>
+		<td></td>
 		<td class="item-price">8</td>
 	</tr>
 
 	<tr class="item">
-		<td class="item-name">MARGARITA </td>
+		<td class="item-name">MARGARITA</td>
+		<td></td>
 		<td class="item-price">8</td>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">MOJITO</td>
+		<td></td>
 		<td class="item-price">8</td>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">CAIPIRINIA</td>
+		<td></td>
 		<td class="item-price">7</td>
 	</tr>
 
 	<tr class="item">
 		<td class="item-name">CUBA LIBRE</td>
+		<td></td>
 		<td class="item-price">7</td>
 	</tr>
 
 	<tr class="item">
-		<td class="item-name">SUMMER TIME LOVE </td>
+		<td class="item-name">LOLLIPOP</td>
+		<td></td>
 		<td class="item-price">8</td>
 	</tr>
 
 	<tr class="item">
-		<td class="item-name">LOLLIPOP </td>
+		<td class="item-name">SORBETTO</td>
+		<td></td>
 		<td class="item-price">8</td>
 	</tr>
 
 	<tr class="item">
-		<td class="item-name">SORBETTO </td>
+		<td class="item-name">SUMMER TIME LOVE</td>
+		<td></td>
+		<td class="item-price">8</td>
+	</tr>
+
+	<tr class="item">
+		<td class="item-name">LONG ISLAND ICED TEA</td>
+		<td></td>
 		<td class="item-price">8</td>
 	</tr>
 
