--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 	<title> </title>
 
-	<link rel="stylesheet" href="index.css">
+	<link rel="stylesheet" href="./index.css">
 
 </head>
 
@@ -25,7 +25,7 @@
 
 	<tr>
 		<th colspan="2" class="gif">
-			<img src="dog.gif"></img>
+			<img src="./dog.gif"></img>
 		</th>
 	</tr>
 
