--- a/index.html
+++ b/index.html
@@ -489,6 +489,11 @@
 		<td class="item-price color-2">10</td>
 	</tr>
 
+        <tr class="item">
+		<td class="item-name">VOTANIKON</td>
+		<td class="item-price color-2">7</td>
+	</tr>
+
 	<tr class="item">
 		<td class="item-name">PLYMOUTH</td>
 		<td class="item-price color-2">10</td>
