--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
 	</tr>
 
 	<tr class="item">
-		<td class="item-name">BEEFATER</td>
+		<td class="item-name">BEEFEATER</td>
 		<td class="item-price color-2">6</td>
 	</tr>
 
