Add 'VALIA CALDA' record

--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@
 		<td class="item-price color-2">4</td>
 	</tr>
 
+	<tr class="item">
+		<td class="item-name">VALIA CALDA</td>
+		<td class="item-price color-2">5</td>
+	</tr>
+
 	<tr>
 		<th class="subgroup-header">
 			<span class="color-1">μηλίτης</span>
